tdf#152983 sw: layout: fix crash in SwContentFrame::Cut()

Surprisingly, SwContentFrame::Cut() is called in a situation where the
frame is not connected to any SwPageFrame yet - it is in a follow fly of
a fly chain that is anchored in a footer, and SwFlyFrame::ChainFrames()
removes it.

(regression from commit b9ef71476fd70bc13f50ebe80390e0730d1b7afb)

Change-Id: Iad84b7b422126e050493dc3b181d47c4dca2fae2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152510
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit d3b64de9581bd5e36ced007ff2e9139bd0343a35)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152533
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>